fix gap and importing images

--- a/src/Components/Record/RecordNumsSection/index.css
+++ b/src/Components/Record/RecordNumsSection/index.css
@@ -8,9 +8,8 @@
 @media (max-width: 658px) {
   .recordnums__page {
     height: 100%;
-  } 
+  }
 }
-
 
 .recordnums__page .recordhaz_contain {
   position: relative;
@@ -26,9 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    row-gap: 23px;
-    
+    gap: 5rem;
+
   }
 }
-
-
